[gd_scene load_steps=2 format=3 uid="uid://cfxselect001"]

[ext_resource type="Script" path="res://scripts/faction_select/faction_select.gd" id="1"]

[node name="FactionSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.08, 0.12, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Choose Your Faction"
horizontal_alignment = 1

[node name="RedButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
text = "ðŸ”´ Red Legion"

[node name="BlueButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.5, 1, 1)
text = "ðŸ”µ Blue Alliance"

[node name="GreenButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.9, 0.4, 1)
text = "ðŸŸ¢ Green Order"

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
horizontal_alignment = 1
